name:                starfield
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bargsteen/starfield#readme
license:             BSD3
license-file:        LICENSE
author:              Kasper Dissing Bargsteen
maintainer:          kasper@bargsteen.com
copyright:           Kasper Dissing Bargsteen
category:            Graphics 
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable starfield
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , helm >= 1.0.0
                     , linear >= 1.0.0
                     , random >= 1.1